[package]
name = "wasmer-static"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "wasmer-static"
path = "main.rs"

[[bin]]
name = "register"
path = "register.rs"

[dependencies]
wasmer = "2.0.0"
wasmer-wasi = "2.0.0"
wasmer-engine-universal = "2.0.0"
wasmer-compiler-cranelift = "2.0.0"
wasmer-emscripten = "2.0.0"

[profile.release]
lto = "fat"
codegen-units = 1